[package]
name = "plugma"
version = "0.1.2"
edition = "2024"
authors = ["Akheke"]
license = "MIT OR Apache-2.0"
description = "A CLI tool for encrypting and decrypting text."

[profile.release]
opt-level = 3        # 'z' to minimize size, or 3 for maximum speed
lto = "fat"             # Enable Link Time Optimization
codegen-units = 1      # Reduce parallel compilation and boost optimization
panic = "unwind"        # Make the binary smaller
strip = true           # Remove debug info (Rust 1.78+)


[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = "1"
rand_core = "0.5"
crossterm = "0.29.0"
